--- a/images/style.css
+++ b/images/style.css
@@ -10,7 +10,7 @@ body {
     font-family: 'Bai Jamjuree', sans-serif;
   }
 
-h1 {
+.page-1 h1 {
     color: hsl(210, 10%, 33%);
     font-size: 25px;
     display: flex;
@@ -82,3 +82,31 @@ h1 {
     justify-content: center;
     font-size: 13px;
 }
+
+.page-2 h1 {
+    margin-top: 100px;
+    color: hsl(210, 10%, 33%);
+    font-size: 25px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+.container-h2 {
+    overflow: auto; /* para que o contêiner se expanda para conter a imagem e o texto */
+    color: hsl(201, 11%, 66%);
+    font-size: 15px;
+    margin-top: 50px;
+  }
+
+.container-h2 h2 {
+    margin-top: 50px;
+    color: hsl(210, 10%, 33%);
+    font-size: 25px;
+    display: flex;
+  }
+  
+.img-computer {
+    float: left; /* para alinhar a imagem à esquerda */
+    margin-right: 150px; /* para adicionar um espaço entre a imagem e o texto */
+  }
