--- a/images/style.css
+++ b/images/style.css
@@ -133,3 +133,45 @@ body {
     margin: 0 auto; /* para alinhar a imagem no centro vertical e horizontal */
     margin-top: 100px;
 }
+
+.page-4 {
+    overflow: auto;
+}
+
+.page-4 .container {
+    float: left;
+    width: 33.33%;
+    box-sizing: border-box;
+    border: 0px solid;
+    padding: 10px;
+    text-align: center;
+    flex-direction: column;
+}
+
+.box img {
+    max-width: 100%; /* para garantir que a imagem não ultrapasse o tamanho da div */
+    height: auto; /* para manter a proporção da imagem */
+    display: block; /* para centralizar a imagem horizontalmente */
+    margin: 0 auto; /* para centralizar a imagem verticalmente */
+}
+
+.page-4 h1 {
+    margin-top: 100px;
+    margin-top: 100px;
+    color: hsl(210, 10%, 33%);
+    font-size: 25px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin: 10px 0;
+}
+
+.page-4 p {
+    color: hsl(201, 11%, 66%);
+    font-size: 15px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin-top: 20px;
+}
+
