--- a/images/style.css
+++ b/images/style.css
@@ -196,3 +196,57 @@ body {
     flex: 0 0 18%;
     margin-right: 10px;
 }
+
+.page-6 h1 {
+    color: hsl(210, 10%, 33%);
+    font-size: 25px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+.page-6 p {
+    color: hsl(201, 11%, 66%);
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+footer {
+    background-color: #f2f2f2;
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+img.logo {
+    flex: 1;
+    max-width: 50px;
+}
+
+.links {
+    flex: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+}
+
+.links div {
+    flex: 1;
+    text-align: center;
+    margin: 10px;
+}
+
+.social {
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.social div {
+    margin: 0 10px;
+}
