--- a/images/style.css
+++ b/images/style.css
@@ -214,31 +214,28 @@ body {
 
 footer {
     background-color: #f2f2f2;
-    padding: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
 }
 
-img.logo {
-    flex: 1;
-    max-width: 50px;
+
+img.logoFooter {
+    width: 50px;
 }
 
 .links {
-    flex: 3;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-wrap: wrap;
-    margin-bottom: 10px;
+    max-width: 50%;
+  }
+
+.item {
+    width: 200px;
+    height: 50px;
+
 }
 
-.links div {
-    flex: 1;
-    text-align: center;
-    margin: 10px;
-}
 
 .social {
     flex: 1;
