--- a/images/style.css
+++ b/images/style.css
@@ -222,12 +222,14 @@ footer {
 
 img.logoFooter {
     width: 50px;
+    margin: 70px 90px;
 }
 
 .links {
     display: flex;
     flex-wrap: wrap;
     max-width: 50%;
+    margin: 50px 100px;
   }
 
 .item {
@@ -242,8 +244,5 @@ img.logoFooter {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-}
-
-.social div {
-    margin: 0 10px;
+    margin: 10px 10px;
 }
