--- a/images/style.css
+++ b/images/style.css
@@ -214,35 +214,41 @@ body {
 
 footer {
     background-color: #f2f2f2;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+    padding: 16px;
+    margin-top: 200px;
+    display: flex;
+    height: 120px;
 }
 
 
 img.logoFooter {
-    width: 50px;
-    margin: 70px 90px;
+    height: 40px;
+    margin-left: 5%;
+    margin-top: 3%;
 }
 
-.links {
+.linksFooter {
     display: flex;
     flex-wrap: wrap;
-    max-width: 50%;
-    margin: 50px 100px;
+    max-width: 450px;
+    margin: 20px 0px 20px 100px;
   }
 
 .item {
-    width: 200px;
-    height: 50px;
+    text-decoration: none;
+    color: rgb(125, 125, 125);
+    margin: 20px;
 
 }
 
 
-.social {
-    flex: 1;
+.socialFooter {
+    height: 36px;
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    margin: 10px 10px;
+    margin-left: 40%;
+    margin-top: 3%;
+}
+
+.icon {
+    margin: 8px;
 }
